[metadata]
name = gcp_library
version = 0.1.0
author = Me
author_email = galvarez.alvarez@iteso.mx
description = Package for cloud management
long_description = file: README.md
long_description_content_type = text/markdown
url = non_defined
classifiers =
    Programming Language :: Python :: 3
    License :: Proprietary License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.9
install_requires =
    google-cloud-compute==1.17.0
    google-api-core==2.17.0
    PyYAML==6.0.1
    google-cloud-monitoring==3.7.0