[metadata]
name = gcp_library
version = 0.1.0
author = Me
author_email = galvarez.alvarez@iteso.mx
description = Package for cloud management
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Gegori1/gcloud_library
classifiers =
    Programming Language :: Python :: 3
    License :: Proprietary License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.9
install_requires =
    google-auth>=2.38.0
    google-cloud-compute>=1.25.0
    google-api-core>=2.24.1
    PyYAML>=6.0.2
    google-cloud-monitoring>=2.27.0